--- a/src/lostitemproject/EachItemGUI.form
+++ b/src/lostitemproject/EachItemGUI.form
@@ -28,10 +28,10 @@
       </Border>
     </Property>
     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[730, 194]"/>
+      <Dimension value="[730, 247]"/>
     </Property>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[730, 194]"/>
+      <Dimension value="[730, 247]"/>
     </Property>
   </Properties>
   <AuxValues>
@@ -194,7 +194,7 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="String allLocation = &quot;&quot;;&#xa;for(int i=0;i&lt;item.getStatus().getLocationName().size();i++){&#xa;    allLocation+=item.getStatus().getLocationName().get(i)+&quot;,&quot;;&#xa;}&#xa;allLocation=allLocation.substring(0, allLocation.length()-1);&#xa;if(allLocation.length()&gt;=15){&#xa;    allLocation=allLocation.substring(0, 14)+&quot;...&quot;;&#xa;}"/>
+        <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="String allLocation = &quot;&quot;;&#xa;for(int i=0;i&lt;item.getStatus().getLocationName().size();i++){&#xa;    allLocation+=item.getStatus().getLocationName().get(i)+&quot;,&quot;;&#xa;}&#xa;if(allLocation.length()&gt;0)&#xa;    allLocation=allLocation.substring(0, allLocation.length()-1);&#xa;if(allLocation.length()&gt;=15){&#xa;    allLocation=allLocation.substring(0, 14)+&quot;...&quot;;&#xa;}"/>
       </AuxValues>
     </Component>
     <Component class="javax.swing.JLabel" name="statusDate">
